welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:33: error: not found: value cerlce
cerlce()
^